# python-project-52

./: Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: linter-check.yml
task_manager/: settings.py  urls.py  views.py
task_manager/locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/templates/: base.html  index.html  login.html
task_manager/templates/components/: messages.html  navbar.html
task_manager/users/: admin.py  forms.py  urls.py  views.py
task_manager/users/migrations/: 0001_initial.py
task_manager/users/templates/users/: form.html  index.html  user_delete.html
